2009-01-30  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-event-window.c
	  (hd_incoming_event_window_set_property): Fix icon size.

	* src/hd-notification-manager.c (hd_notification_manager_notify): Do
	not check existence of icon. If no "time" hint is set use current
	time. Fixes NB#97905.

	* src/home.plugins.in: Revert.

2009-01-29  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (HDPluginInfo, plugin_removed_cb,
	  plugin_module_added_cb, hd_applet_manager_init,
	  hd_applet_manager_get_model,
	  hd_applet_manager_install_applet_from_desktop_file,
	  hd_applet_manager_install_applet): Add installed applet to Home.
	  Fixes NB#96229
	* src/home.conf.in: Installing of new applets is now done by
	  HDAppletManager.

	* debian/changelog: Update.

2009-01-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-manager.c (monitors, service, row, HDTaskInfo,
	  DESKTOP_FILE_CHANGED, DESKTOP_FILE_DELETED, LAST_SIGNAL,
	  task_manager_signals, hd_task_info_free,
	  hd_task_manager_load_desktop_file,
	  hd_task_manager_remove_desktop_file, applications_dir_changed,
	  visit_func, hd_task_manager_init, hd_task_manager_dispose,
	  hd_task_manager_finalize, hd_task_manager_class_init): Monitor the
	  applications directory for changes and reload .desktop files if a
	  file fas created/changed or remove task shortcuts i a file was
	  deleted.

	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_deleted_cb,
	  hd_task_shortcut_constructed): Send delete event to window if the
	  .desktop file was removed.

	* debian/changelog: Update.

	Fixes NB#93939

2009-01-26  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update.

	* debian/control: Add upstart-dev to build-deps.

	* debian/rules: Add call to dh_installxsession.

	* debian/hildon-home.xsession (added): Add xsession file from
	system-services.
	* debian/hildon-home.init (deleted): Remove unused init file.
